Added OBJAnimation Class

--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="Colors.cpp" />
     <ClCompile Include="gl_core_4_4.c" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="OBJAnimation.cpp" />
     <ClCompile Include="OBJLoader.cpp" />
     <ClCompile Include="ShaderLoader.cpp" />
     <ClCompile Include="Terrain.cpp" />
@@ -177,6 +178,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Colors.h" />
     <ClInclude Include="gl_core_4_4.h" />
+    <ClInclude Include="OBJAnimation.h" />
     <ClInclude Include="OBJLoader.h" />
     <ClInclude Include="ShaderLoader.h" />
     <ClInclude Include="Terrain.h" />
