Added Particle Emitter

--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="OBJAnimation.cpp" />
     <ClCompile Include="OBJLoader.cpp" />
+    <ClCompile Include="ParticleEmitter.cpp" />
     <ClCompile Include="ShaderLoader.cpp" />
     <ClCompile Include="Terrain.cpp" />
     <ClCompile Include="Texture.cpp" />
@@ -190,6 +191,7 @@
     <ClInclude Include="LightManager.h" />
     <ClInclude Include="OBJAnimation.h" />
     <ClInclude Include="OBJLoader.h" />
+    <ClInclude Include="ParticleEmitter.h" />
     <ClInclude Include="ShaderLoader.h" />
     <ClInclude Include="Terrain.h" />
     <ClInclude Include="Texture.h" />
