Added GUI for post processing Added new 3D model Removed some useless textures

--- a/OpenGL/imgui.ini
+++ b/OpenGL/imgui.ini
@@ -1,10 +1,15 @@
 [Debug]
-Pos=111,391
+Pos=0,201
 Size=404,272
 Collapsed=0
 
 [Particle Options]
-Pos=25,71
-Size=389,161
+Pos=122,92
+Size=387,200
+Collapsed=0
+
+[Post Processing]
+Pos=896,37
+Size=352,79
 Collapsed=0
 
