Added new comments Added generate new terrain GUI button Removed TGA textures from OBJ folder Removed Mario Model Cleaned Up Code

--- a/OpenGL/imgui.ini
+++ b/OpenGL/imgui.ini
@@ -4,12 +4,22 @@ Size=404,272
 Collapsed=0
 
 [Particle Options]
-Pos=122,92
-Size=387,200
+Pos=6,8
+Size=349,191
 Collapsed=0
 
 [Post Processing]
 Pos=896,37
 Size=352,79
+Collapsed=0
+
+[Test]
+Pos=61,289
+Size=248,152
+Collapsed=0
+
+[Terrain Settings]
+Pos=9,223
+Size=173,58
 Collapsed=0
 
