--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Colors.cpp" />
     <ClCompile Include="FlyCamera.cpp" />
+    <ClCompile Include="Frustum.cpp" />
     <ClCompile Include="gl_core_4_4.c" />
     <ClCompile Include="imgui.cpp" />
     <ClCompile Include="imgui_demo.cpp" />
@@ -189,9 +190,11 @@
     <ClInclude Include="AABB.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="BaseApplication.h" />
+    <ClInclude Include="BoudingSphere.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Colors.h" />
     <ClInclude Include="FlyCamera.h" />
+    <ClInclude Include="Frustum.h" />
     <ClInclude Include="gl_core_4_4.h" />
     <ClInclude Include="imconfig.h" />
     <ClInclude Include="imgui.h" />
