--- a/OpenGL/imgui.ini
+++ b/OpenGL/imgui.ini
@@ -9,9 +9,9 @@ Size=349,191
 Collapsed=0
 
 [Post Processing]
-Pos=3,57
+Pos=977,58
 Size=352,79
-Collapsed=1
+Collapsed=0
 
 [Test]
 Pos=195,355
@@ -31,5 +31,10 @@ Collapsed=0
 [Raknet Settings]
 Pos=-1,104
 Size=428,294
+Collapsed=0
+
+[Physics Object]
+Pos=50,213
+Size=376,138
 Collapsed=0
 
