--- a/OpenGL/imgui.ini
+++ b/OpenGL/imgui.ini
@@ -24,7 +24,7 @@ Size=173,58
 Collapsed=1
 
 [Camera Settings]
-Pos=5,40
+Pos=131,-13
 Size=350,58
 Collapsed=0
 
@@ -34,7 +34,47 @@ Size=428,294
 Collapsed=0
 
 [Physics Object]
-Pos=50,213
-Size=376,138
+Pos=36,161
+Size=467,269
+Collapsed=0
+
+[Physics Object##foo1]
+Pos=117,240
+Size=316,283
+Collapsed=0
+
+[Physics Object##0.000000]
+Pos=39,78
+Size=244,123
+Collapsed=0
+
+[Physics Object##1.000000]
+Pos=38,206
+Size=252,122
+Collapsed=0
+
+[Physics Object 0.000000##0.000000]
+Pos=45,68
+Size=95,117
+Collapsed=0
+
+[Physics Object 1.000000##1.000000]
+Pos=50,210
+Size=191,117
+Collapsed=0
+
+[Physics Object 0##0]
+Pos=2,50
+Size=272,144
+Collapsed=0
+
+[Physics Object 1##1]
+Pos=8,211
+Size=297,186
+Collapsed=0
+
+[Physics Object 2##2]
+Pos=42,397
+Size=227,159
 Collapsed=0
 
