--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="AABB.cpp" />
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="BaseApplication.cpp" />
+    <ClCompile Include="Box.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Colors.cpp" />
     <ClCompile Include="FlyCamera.cpp" />
@@ -179,6 +180,7 @@
     <ClCompile Include="OBJLoader.cpp" />
     <ClCompile Include="ParticleEmitter.cpp" />
     <ClCompile Include="PhysicsManager.cpp" />
+    <ClCompile Include="Plane.cpp" />
     <ClCompile Include="PostProcessing.cpp" />
     <ClCompile Include="Rigidbody.cpp" />
     <ClCompile Include="ShaderLoader.cpp" />
@@ -194,6 +196,7 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="BaseApplication.h" />
     <ClInclude Include="BoudingSphere.h" />
+    <ClInclude Include="Box.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Colors.h" />
     <ClInclude Include="FlyCamera.h" />
@@ -211,6 +214,7 @@
     <ClInclude Include="ParticleEmitter.h" />
     <ClInclude Include="PhysicsManager.h" />
     <ClInclude Include="PhysicsObject.h" />
+    <ClInclude Include="Plane.h" />
     <ClInclude Include="PostProcessing.h" />
     <ClInclude Include="Rigidbody.h" />
     <ClInclude Include="ShaderLoader.h" />
