--- a/OpenGL/imgui.ini
+++ b/OpenGL/imgui.ini
@@ -4,9 +4,9 @@ Size=404,272
 Collapsed=0
 
 [Particle Options]
-Pos=634,17
+Pos=931,3
 Size=349,191
-Collapsed=0
+Collapsed=1
 
 [Post Processing]
 Pos=977,58
@@ -24,7 +24,7 @@ Size=173,58
 Collapsed=1
 
 [Camera Settings]
-Pos=131,-13
+Pos=129,4
 Size=350,58
 Collapsed=0
 
@@ -64,17 +64,22 @@ Size=191,117
 Collapsed=0
 
 [Physics Object 0##0]
-Pos=2,50
+Pos=0,93
 Size=272,144
-Collapsed=0
+Collapsed=1
 
 [Physics Object 1##1]
-Pos=8,211
+Pos=1,72
 Size=297,186
-Collapsed=0
+Collapsed=1
 
 [Physics Object 2##2]
-Pos=42,397
-Size=227,159
+Pos=-3,118
+Size=213,139
+Collapsed=0
+
+[Physics Object 3##3]
+Pos=2,396
+Size=213,137
 Collapsed=0
 
