Added Sphere+Sphere Collision Response Added Sphere+Plane Collision Response Added timestep to physicsManager

--- a/OpenGL/imgui.ini
+++ b/OpenGL/imgui.ini
@@ -4,9 +4,9 @@ Size=404,272
 Collapsed=0
 
 [Particle Options]
-Pos=931,3
+Pos=912,3
 Size=349,191
-Collapsed=1
+Collapsed=0
 
 [Post Processing]
 Pos=977,58
@@ -24,7 +24,7 @@ Size=173,58
 Collapsed=1
 
 [Camera Settings]
-Pos=129,4
+Pos=934,136
 Size=350,58
 Collapsed=0
 
@@ -76,10 +76,50 @@ Collapsed=1
 [Physics Object 2##2]
 Pos=-3,118
 Size=213,139
-Collapsed=0
+Collapsed=1
 
 [Physics Object 3##3]
 Pos=17,397
 Size=213,137
+Collapsed=0
+
+[Physic Object ]
+Pos=4,63
+Size=205,119
+Collapsed=0
+
+[Physic Object ]
+Pos=223,102
+Size=226,120
+Collapsed=0
+
+[Physic Object ]
+Pos=-4,314
+Size=256,131
+Collapsed=0
+
+[Physic Object ]
+Pos=0,195
+Size=211,107
+Collapsed=0
+
+[Physic Object 0]
+Pos=3,2
+Size=207,135
+Collapsed=0
+
+[Physic Object 1]
+Pos=1,274
+Size=210,140
+Collapsed=0
+
+[Physic Object 2]
+Pos=2,138
+Size=211,137
+Collapsed=0
+
+[Physic Object 3]
+Pos=3,418
+Size=213,135
 Collapsed=0
 
