--- a/OpenGL/imgui.ini
+++ b/OpenGL/imgui.ini
@@ -4,14 +4,14 @@ Size=404,272
 Collapsed=0
 
 [Particle Options]
-Pos=912,3
+Pos=916,5
 Size=349,191
-Collapsed=0
+Collapsed=1
 
 [Post Processing]
-Pos=977,58
+Pos=562,4
 Size=352,79
-Collapsed=0
+Collapsed=1
 
 [Test]
 Pos=195,355
@@ -24,9 +24,9 @@ Size=173,58
 Collapsed=1
 
 [Camera Settings]
-Pos=934,136
+Pos=209,4
 Size=350,58
-Collapsed=0
+Collapsed=1
 
 [Raknet Settings]
 Pos=-1,104
@@ -104,22 +104,547 @@ Size=211,107
 Collapsed=0
 
 [Physic Object 0]
-Pos=3,2
-Size=207,135
+Pos=0,1
+Size=209,137
 Collapsed=0
 
 [Physic Object 1]
-Pos=1,274
+Pos=1,141
 Size=210,140
 Collapsed=0
 
 [Physic Object 2]
-Pos=2,138
+Pos=0,283
 Size=211,137
 Collapsed=0
 
 [Physic Object 3]
 Pos=3,418
 Size=213,135
+Collapsed=0
+
+[Physics Manager]
+Pos=915,28
+Size=327,272
+Collapsed=0
+
+[Physic Object 5]
+Pos=223,553
+Size=206,145
+Collapsed=0
+
+[Physic Object 6]
+Pos=432,556
+Size=209,140
+Collapsed=0
+
+[Physic Object 7]
+Pos=648,557
+Size=215,145
+Collapsed=0
+
+[Physic Object 8]
+Pos=1086,553
+Size=214,141
+Collapsed=0
+
+[Physic Object 9]
+Pos=870,552
+Size=216,149
+Collapsed=0
+
+[Physic Object 10]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 11]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 12]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 13]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 14]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 15]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 16]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 17]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 18]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 19]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 20]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 21]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 22]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 23]
+Pos=137,182
+Size=95,140
+Collapsed=0
+
+[Physic Object 24]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 25]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 26]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 27]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 28]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 29]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 30]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 31]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 32]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 33]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 34]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 35]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 36]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 37]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 38]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 39]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 40]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 41]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 42]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 43]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 44]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 45]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 46]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 47]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 48]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 49]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 50]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 51]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 52]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 53]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 54]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 55]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 56]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 57]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 58]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 59]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 60]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 61]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 62]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 63]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 64]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 65]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 66]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 67]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 68]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 69]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 70]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 71]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 72]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 73]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 74]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 75]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 76]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 77]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 78]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 79]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 80]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 81]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 82]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 83]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 84]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 85]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 86]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 87]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 88]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 89]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 90]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 91]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 92]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 93]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 94]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 95]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 96]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 97]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 98]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 99]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 100]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 101]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 102]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 103]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 104]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 105]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 106]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 107]
+Pos=60,60
+Size=95,140
+Collapsed=0
+
+[Physic Object 4]
+Pos=2,556
+Size=219,140
 Collapsed=0
 
