Added Static Rigidbodies Added Drag Added Angular Velocities Fixed sphere2sphere collisions

--- a/OpenGL/imgui.ini
+++ b/OpenGL/imgui.ini
@@ -104,12 +104,12 @@ Size=211,107
 Collapsed=0
 
 [Physic Object 0]
-Pos=0,1
+Pos=16,-6
 Size=209,137
 Collapsed=0
 
 [Physic Object 1]
-Pos=1,141
+Pos=1,140
 Size=210,140
 Collapsed=0
 
@@ -119,7 +119,7 @@ Size=211,137
 Collapsed=0
 
 [Physic Object 3]
-Pos=3,418
+Pos=10,418
 Size=213,135
 Collapsed=0
 
@@ -134,7 +134,7 @@ Size=206,145
 Collapsed=0
 
 [Physic Object 6]
-Pos=432,556
+Pos=15,557
 Size=209,140
 Collapsed=0
 
